--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,11 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@unpublished{pfeil2024_riskmgmt,
+  title        = {Seminar Paper: AI-based Risk Management in Critical Infrastructures},
+  author       = {Pfeil, Valentin},
+  year         = {2024},
+  month        = {06},
+  note         = {Seminar paper, not formally published},
+  institution  = {Universität der Bundeswehr München},
+  school       = {Department of Computer Science},
+  howpublished = {Internal seminar submission, HT24},
+  abstract     = {This seminar paper explores the application of artificial intelligence for risk management in critical infrastructures, focusing on methods for detection, mitigation, and resilience improvement under NATO and ISO security frameworks.}
 }
