--- a/content/publication/bachelor-thesis/cite.bib
+++ b/content/publication/bachelor-thesis/cite.bib
@@ -1,5 +1,5 @@
 @unpublished{pfeil2024_bachelor,
-  title        = {Bachelor's Thesis: Confidential Computing via Hardware Trusted Execution Environments by an OpenStack HPC-capable Cloud},
+  title        = {Bachelor’s Thesis: Confidential Computing via Hardware Trusted Execution Environments by an OpenStack HPC-capable Cloud},
   author       = {Pfeil, Valentin},
   year         = {2024},
   month        = {01},
