--- a/content/publication/bachelor-seminar/cite.bib
+++ b/content/publication/bachelor-seminar/cite.bib
@@ -8,6 +8,6 @@
   type         = {Seminar Paper},
   number       = {INF2-2023-3},
   note         = {Seminar paper for "Applied Methods in Network and System Security" (FT 2023)},
-  abstract     = {This seminar paper explores the intersection of High-Performance Computing (HPC) and Trusted Execution Environments (TEEs). It discusses their symbiosis, covering threat models, security and performance analyses, and practical use cases with AMD SEV and Intel SGX. Frameworks such as SCONE, Graphene-SGX and Kata are evaluated, and examples of Secure Multiparty Computation with Python/Flask are presented. The work highlights challenges, limitations and future research directions in Confidential HPC.},
+  abstract     = {This seminar paper explores the intersection of High-Performance Computing (HPC) and Trusted Execution Environments (TEEs). It discusses their symbiosis, covering threat models, security and performance analyses and practical use cases with AMD SEV and Intel SGX. Frameworks such as SCONE, Graphene-SGX and Kata are evaluated and examples of Secure Multiparty Computation with Python/Flask are presented. The work highlights challenges, limitations and future research directions in Confidential HPC.},
   howpublished = {Internal seminar submission, FT 2023}
 }
