--- a/content/publication/master-seminar/cite.bib
+++ b/content/publication/master-seminar/cite.bib
@@ -7,5 +7,5 @@
   institution  = {Universität der Bundeswehr München},
   school       = {Department of Computer Science},
   howpublished = {Internal seminar submission, HT24},
-  abstract     = {This seminar paper explores the application of artificial intelligence for risk management in critical infrastructures, focusing on methods for detection, mitigation, and resilience improvement under NATO and ISO security frameworks.}
+  abstract     = {This seminar paper explores the application of artificial intelligence for risk management in critical infrastructures, focusing on methods for detection, mitigation and resilience improvement under NATO and ISO security frameworks.}
 }
